# indian_pulse

./: .gitignore  README.md  all_states_news_output.json  all_states_news_urls.json  filtered_state_news_urls.json  india_news_urls.json  pyproject.toml  state_importance.json  state_urls.py
deploy/: config.py  main.py  models.py
deploy/processors/: content_processor.py  url_processor.py
deploy/scrapers/: content_scraper.py
deploy/utils/: helpers.py
